Added logging with Azure AD, added filters to product catalog,

--- a/Compubuilt/Views/Products/ProductPage.cshtml
+++ b/Compubuilt/Views/Products/ProductPage.cshtml
@@ -17,7 +17,7 @@
                             @foreach (var productPhotoThumbnailUrl in Model.ProductPhotoThumbnailUrls)
                             {
                                 <a class="pt" href="#product-4">
-                                    <img src="~/@Html.DisplayFor(modelItem => productPhotoThumbnailUrl)" alt="">
+                                    <img src="@Html.DisplayFor(modelItem => productPhotoThumbnailUrl)" alt="">
                                 </a>
                             }
                         </div>
