--- a/Compubuilt/Views/Home/Index.cshtml
+++ b/Compubuilt/Views/Home/Index.cshtml
@@ -56,52 +56,52 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-6 p-0">
-                <div class="categories__item categories__large__item set-bg" data-setbg="photos/categories/category-1.jpg">
+                <div class="categories__item categories__large__item set-bg" data-setbg="https://i.postimg.cc/LXHmYkNM/category-1.jpg">
                     <div class="categories__text">
-                        <h1>Women’s fashion</h1>
-                        <p>
+                        <h1>Best in class monitors</h1>
+                        @*                        <p>
                             Sitamet, consectetur adipiscing elit, sed do eiusmod tempor incidid-unt labore
                             edolore magna aliquapendisse ultrices gravida.
-                        </p>
-                        <a href="#">Shop now</a>
+                        </p>*@
+                        <a asp-controller="ProductCatalog" asp-action="Index" asp-route-id="1">Shop now</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-6 p-0">
-                        <div class="categories__item set-bg" data-setbg="photos/categories/category-2.jpg">
+                        <div class="categories__item set-bg" data-setbg="https://i.postimg.cc/nc574ryW/category-2.jpg">
                             <div class="categories__text">
-                                <h4>Men’s fashion</h4>
-                                <p>358 items</p>
-                                <a href="#">Shop now</a>
+                                <h4>Fastest RAM</h4>
+                                @*<p>358 items</p>*@
+                                <a asp-controller="ProductCatalog" asp-action="Index" asp-route-id="5">Shop now</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 p-0">
-                        <div class="categories__item set-bg" data-setbg="photos/categories/category-3.jpg">
+                        <div class="categories__item set-bg" data-setbg="https://i.postimg.cc/4yZ3Xkhs/category-3.jpg">
                             <div class="categories__text">
-                                <h4>Kid’s fashion</h4>
+                                <h4>GPU</h4>
                                 <p>273 items</p>
-                                <a href="#">Shop now</a>
+                                <a asp-controller="ProductCatalog" asp-action="Index" asp-route-id="4">Shop now</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 p-0">
-                        <div class="categories__item set-bg" data-setbg="photos/categories/category-4.jpg">
+                        <div class="categories__item set-bg" data-setbg="https://i.postimg.cc/wM5NgQfR/category-4.jpg">
                             <div class="categories__text">
-                                <h4>Cosmetics</h4>
-                                <p>159 items</p>
-                                <a href="#">Shop now</a>
+                                <h4>Gaming mouse</h4>
+                                @*<p>159 items</p>*@
+                                <a asp-controller="ProductCatalog" asp-action="Index" asp-route-id="7">Shop now</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 p-0">
-                        <div class="categories__item set-bg" data-setbg="photos/categories/category-5.jpg">
+                        <div class="categories__item set-bg" data-setbg="https://i.postimg.cc/fyjhCVyh/category-5.jpg">
                             <div class="categories__text">
-                                <h4>Accessories</h4>
-                                <p>792 items</p>
-                                <a href="#">Shop now</a>
+                                <h4>SSD</h4>
+                                @*<p>792 items</p>*@
+                                <a asp-controller="ProductCatalog" asp-action="Index" asp-route-id="2">Shop now</a>
                             </div>
                         </div>
                     </div>
@@ -463,10 +463,10 @@
                     <div class="footer__logo">
                         <a href="#"><img src="photos/logo.png" alt=""></a>
                     </div>
-                    <p>
+@*                    <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                         cilisis.
-                    </p>
+                    </p>*@
                     <div class="footer__payment">
                         <a href="#"><img src="photos/payment/payment-1.png" alt=""></a>
                         <a href="#"><img src="photos/payment/payment-2.png" alt=""></a>
@@ -476,7 +476,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-2 col-md-3 col-sm-5">
+@*            <div class="col-lg-2 col-md-3 col-sm-5">
                 <div class="footer__widget">
                     <h6>Quick links</h6>
                     <ul>
@@ -486,8 +486,8 @@
                         <li><a href="#">FAQ</a></li>
                     </ul>
                 </div>
-            </div>
-            <div class="col-lg-2 col-md-3 col-sm-4">
+            </div>*@
+@*            <div class="col-lg-2 col-md-3 col-sm-4">
                 <div class="footer__widget">
                     <h6>Account</h6>
                     <ul>
@@ -497,21 +497,21 @@
                         <li><a href="#">Wishlist</a></li>
                     </ul>
                 </div>
-            </div>
+            </div>*@
             <div class="col-lg-4 col-md-8 col-sm-8">
                 <div class="footer__newslatter">
-                    <h6>NEWSLETTER</h6>
+@*                    <h6>NEWSLETTER</h6>
                     <form action="#">
                         <input type="text" placeholder="Email">
                         <button type="submit" class="site-btn">Subscribe</button>
-                    </form>
-                    <div class="footer__social">
+                    </form>*@
+@*                    <div class="footer__social">
                         <a href="#"><i class="fa fa-facebook"></i></a>
                         <a href="#"><i class="fa fa-twitter"></i></a>
                         <a href="#"><i class="fa fa-youtube-play"></i></a>
                         <a href="#"><i class="fa fa-instagram"></i></a>
                         <a href="#"><i class="fa fa-pinterest"></i></a>
-                    </div>
+                    </div>*@
                 </div>
             </div>
         </div>
@@ -519,7 +519,7 @@
             <div class="col-lg-12">
 
                 <div class="footer__copyright__text">
-                    <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="#" target="_blank">Heart</a></p>
+                    <p>Copyright &copy; <script>document.write(new Date().getFullYear());</script> LGTM </p>
                 </div>
 
             </div>
