--- a/Compubuilt/Views/Products1/Create.cshtml
+++ b/Compubuilt/Views/Products1/Create.cshtml
@@ -1,11 +1,10 @@
 ﻿@model Compubuilt.Models.Product
 
 @{
-    ViewData["Title"] = "Add new product";
+    ViewData["Title"] = "Create";
 }
-<div class="container">
 
-<h1>Add new product</h1>
+<h1>Create</h1>
 
 <h4>Product</h4>
 <hr />
@@ -33,14 +32,14 @@
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-@*            <div class="form-group">
-                <label asp-for="AverageRatingValue" class="control-label"></label>
-                <input asp-for="AverageRatingValue" class="form-control" />
-                <span asp-validation-for="AverageRatingValue" class="text-danger"></span>
-            </div>*@
             <div class="form-group">
                 <label asp-for="ProductCategoryId" class="control-label"></label>
                 <select asp-for="ProductCategoryId" class ="form-control" asp-items="ViewBag.ProductCategoryId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="AverageRatingValue" class="control-label"></label>
+                <input asp-for="AverageRatingValue" class="form-control" />
+                <span asp-validation-for="AverageRatingValue" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -52,7 +51,4 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-</div>
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+
