--- a/Compubuilt/Views/Shared/Components/NewProducts/NewProducts.cshtml
+++ b/Compubuilt/Views/Shared/Components/NewProducts/NewProducts.cshtml
@@ -20,8 +20,9 @@
                             <div class="label new">New</div>
                             <ul class="product__hover">
                                 <li><a href="@Html.DisplayFor(modelItem => product.ProductPhotoUrl)" class="image-popup"><span class="arrow_expand"></span></a></li>
-                                <li><a href="#"><span class="icon_heart_alt"></span></a></li>
-                                <li><a href="#"><span class="icon_bag_alt"></span></a></li>
+@*                                <li><a href="#"><span class="icon_heart_alt"></span></a></li>
+                                <li><a href="#"><span class="icon_bag_alt"></span></a></li>*@
+                                <li><a asp-controller="ShoppingCart" asp-action="AddItemToCart" asp-route-id="@product.ProductId" asp-route-quantity="1"><span class="icon_bag_alt"></span></a></li>
                             </ul>
                         </div>
                         <div class="product__item__text">
