--- a/Compubuilt/Views/Shared/_Layout.cshtml
+++ b/Compubuilt/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@
                         <li @*class="active"*@><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
 @*                        <li><a href="#">Women’s</a></li>
                         <li><a href="#">Men’s</a></li>*@
-                        <li><a asp-area="" asp-controller="ProductCatalog" asp-action="Index">Shop</a></li>
+                        <li><a asp-area="" asp-controller="ProductCatalog" asp-action="Index" asp-route-id="">Shop</a></li>
 @*                        <li>
                             <a href="#">Pages</a>
                             <ul class="dropdown">
@@ -119,9 +119,15 @@
                                 <li><a href="#">Blog Details</a></li>
                             </ul>
                         </li>
-                        <li>
-                            <a asp-controller="Customers" asp-action="CustomerDetailsEdit">My Profile</a>
-                        </li>
+<li>
+    <a asp-controller="Customers" asp-action="CustomerDetailsEdit">My Profile</a>
+
+</li>
+<li>
+    <a asp-area="" asp-controller="ShoppingCart" asp-action="Index">
+        Cart <span class="icon_bag_alt"></span>
+    </a>
+</li>
                         @*<li><a href="#">Blog</a></li>*@
                         @*<li><a href="#">Contact</a></li>*@
                     </ul>
@@ -130,23 +136,20 @@
             <div class="col-lg-3">
                 <div class="header__right">
 
-                    <partial name="_LoginPartial"/>
 
                     <ul class="header__right__widget">
-                        <li><span class="icon_search search-switch"></span></li>
+                        @*                        <li><span class="icon_search search-switch"></span></li>
                         <li>
                             <a href="#">
                                 <span class="icon_heart_alt"></span>
                                 <div class="tip">2</div>
                             </a>
-                        </li>
+                        </li>*@
                         <li>
-                            <a asp-area="" asp-controller="ShoppingCart" asp-action="Index">
-                                <span class="icon_bag_alt"></span>
-@*                                <div class="tip">2</div>*@
-                            </a>
+
                         </li>
                     </ul>
+                    <partial name="_LoginPartial"/>
                 </div>
             </div>
         </div>
@@ -205,11 +208,11 @@
         </main>
     @*</div>*@
 
-    <footer class="border-top footer text-muted">
+@*    <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - LGTM - Looks Good To Me - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>
+    </footer>*@
 @*    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>*@
